--- a/db_recyclerview/app/src/main/res/layout/activity_main.xml
+++ b/db_recyclerview/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.drawerlayout.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
 
@@ -8,9 +8,7 @@
     android:layout_width="match_parent"
     android:id="@+id/drawer_layout"
     tools:context=".MainActivity">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -24,23 +22,12 @@
             android:layout_gravity="end"
             android:id="@+id/btn_open"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/recyclerview"
-            android:scrollbarFadeDuration="0"
-            android:scrollbarSize="50dp"
-            android:scrollbarThumbVertical="@android:color/darker_gray"
-            android:scrollbars="vertical"
-            android:layout_weight="1">
-
-        </androidx.recyclerview.widget.RecyclerView>
-
         <Button
             android:id="@+id/btn_add"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="8"
+            android:layout_height="wrap_content"
+
+
             android:text="추가" />
 
 
